@@ -67,7 +67,7 @@ public class HttpConnection implements Connection {
 	private static URL encodeUrl(URL u) {
         try {
             //  odd way to encode urls, but it works!
-            final URI uri = new URI(u.getProtocol(), u.getUserInfo(), u.getHost(), u.getPort(), u.getPath(), u.getQuery(), u.getRef());
+            final URI uri = new URI(u.toExternalForm());
             return new URL(uri.toASCIIString());
         } catch (Exception e) {
             return u;
